deployments/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-demoapp
  labels:
    istio-injection: enabled
