deployments/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app
  namespace: ns-demoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: thiaggom/demo-app
        ports:
          - name: http
            containerPort: 4000
            
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 30%
