deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: ns-demoapp
spec:
  selector:
    app: node-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
  type: LoadBalancer
