deployments/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
   name: node-app-gateway
   namespace: ns-demoapp
spec:
   selector:
      istio: ingressgateway

   servers:
   - port:
      number: 80
      name: http
      protocol: HTTP

     hosts:
     - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: node-app-vservice
   namespace: ns-demoapp

spec:
   hosts:
   - "*"

   gateways:
   - node-app-gateway

   http:
   - match:
     route:
     - destination:
        host: node-app-service
        port: 
          number: 80
